# ragas

./: AIAssignment-Task2_RAG-BasedSemanticQuoteRetrievalandStructuredQA.md  comprehensive_rag_evaluation.py  custom_rag_evaluation_results.json  rag_data_preparation.py  rag_evaluation_individual_scores.csv  rag_evaluation_report.md  rag_evaluation_summary.txt  rag_model_fine_tuning.py  rag_pipeline.py  rag_pipeline_enhanced.py  rag_processed_quotes.csv  ragas_evaluator.py  requirements.txt  retrieval_methods_comparison.csv  streamlit_app.py  todo.md
Downloads/RAGAS Evaluation for RAG/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  custom_rag_evaluator.py  demo_rag_system.py  deploy.py  pyproject.toml  rag_architecture_plan.md  rag_evaluation.py  rag_pipeline_advanced.py  rag_pipeline_enhanced.py  ragas_evaluator.py  requirements.txt  setup.py  test_advanced_rag.py  test_rag_pipeline_enhanced.py  test_rag_system.py
Downloads/RAGAS Evaluation for RAG/.github/workflows/: ci.yml
Downloads/decision_tree_iris/decision_tree_iris/: README.md  app.py  decision_tree_model.pkl  requirements.txt  train_model.py
Downloads/logistic_regression_diabetes/logistic_regression_diabetes/: IMPROVEMENTS_SUMMARY.md  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  app.py  config.py  data_analysis.py  deploy.py  logistic_model.pkl  model_explainer.py  requirements.txt  run_app.py  scaler.pkl  streamlit_app.py  test_app.py  train_model.py  utils.py
Downloads/logistic_regression_diabetes/logistic_regression_diabetes/.streamlit/: config.toml  secrets.toml
Downloads/sentiment_analysis-main/sentiment_analysis-main/: .gitignore  README.md  app.py  config.py  requirements.txt  setup.py  test_app.py  utils.py
Downloads/sentiment_analysis-main/sentiment_analysis-main/notebooks/: imdb_sentiment_analysis.py
Downloads/sentiment_analysis-main/sentiment_analysis-main/notebooks/model/: imdb_pipeline.pkl
Downloads/time_series_forecasting/: .gitignore  Dockerfile  README.md  deploy.py  docker-compose.yml  requirements.txt  temperature_forecast.ipynb  temperature_forecast.py  test_app.py
