[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-quote-system"
dynamic = ["version"]
description = "A comprehensive RAG system for quote retrieval and question answering using open source models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RAG Development Team", email = "your.email@example.com"}
]
maintainers = [
    {name = "RAG Development Team", email = "your.email@example.com"}
]
keywords = ["rag", "retrieval", "generation", "quotes", "nlp", "machine learning", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.1.0",
    "nltk>=3.7",
    "ragas>=0.0.22",
    "datasets>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "streamlit>=1.22.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
]

[project.scripts]
rag-demo = "demo_rag_system:main"
rag-test = "test_rag_system:main"

[project.urls]
Homepage = "https://github.com/yourusername/rag-quote-system"
Documentation = "https://github.com/yourusername/rag-quote-system#readme"
Repository = "https://github.com/yourusername/rag-quote-system"
"Bug Tracker" = "https://github.com/yourusername/rag-quote-system/issues"

[tool.setuptools_scm]
write_to = "rag_quote_system/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
] 